# localgate

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: api-reference.md  architecture.md  configuration.md  database-setup.md  deployment.md  getting-started.md  rag-memory.md
docs/decisions/: 0001-dependencies-over-middleware.md  0002-json-embeddings-over-pgvector.md  0003-sha256-for-api-keys.md
examples/: curl_examples.sh  docker-compose.postgres.yml  langchain_example.py  openai_sdk_example.py
scripts/: benchmark.py  dev-setup.sh
src/localgate/: __init__.py  __main__.py  app.py  cli.py  config.py
src/localgate/agent/: __init__.py  gitutil.py  ignore.py  loop.py  memory.py  render.py  repl.py  tools.py
src/localgate/api/: chat.py  completions.py  config.py  conversations.py  deps.py  embeddings.py  export.py  health.py  keys.py  models.py  usage.py
src/localgate/backends/: __init__.py  base.py  fake.py  llamacpp.py  ollama.py  openai_compat.py  vllm.py
src/localgate/core/: auth.py  cache.py  db_config_store.py  errors.py  logging.py  metrics.py  rate_limiter.py  streaming.py  token_counter.py  types.py
src/localgate/dashboard/: routes.py
src/localgate/dashboard/static/: dashboard.js  index.html
src/localgate/db/: engine.py  models.py
src/localgate/db/migrations/: __init__.py  alembic.ini  env.py
src/localgate/db/migrations/versions/: 0001_initial_schema.py  0002_summaries_and_accounting.py
src/localgate/db/repositories/: conversations.py  embeddings.py  keys.py  usage.py
src/localgate/memory/: chunker.py  context_builder.py  embedder.py  retriever.py  summarizer.py
src/localgate/middleware/: __init__.py  auth_middleware.py  logging_middleware.py  rate_limit_middleware.py  token_counting_middleware.py
tests/: conftest.py
tests/e2e/: test_full_flow.py
tests/integration/: test_chat_endpoint.py  test_chat_resilience.py  test_cli.py  test_database_connectors.py  test_key_management.py  test_migrations.py  test_operations.py  test_rag_pipeline.py  test_summarizer.py
tests/unit/: test_agent_gitutil.py  test_agent_ignore.py  test_agent_loop.py  test_agent_memory.py  test_agent_render.py  test_agent_repl.py  test_agent_streaming.py  test_agent_tools.py  test_auth.py  test_backend_error_messages.py  test_backends.py  test_cache.py  test_chunker.py  test_config.py  test_rate_limiter.py  test_token_counter.py
