[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "localgate"
version = "0.7.1"
description = "A local-first API gateway for open-source LLMs: auth, RAG memory extension, DB connectors, token accounting, and a built-in coding agent."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Anjal Ghimire", email = "anjalghimire890@gmail.com" }]
keywords = [
    "llm",
    "ollama",
    "rag",
    "api-gateway",
    "self-hosted",
    "local-first",
    "vllm",
    "llama-cpp",
    "coding-agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "httpx>=0.27",
    "tiktoken>=0.7",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "rich>=13.7",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "asyncpg>=0.29",
]

[project.scripts]
localgate = "localgate.cli:app"

[project.urls]
Homepage = "https://github.com/AnjalLLL/localgate"
Documentation = "https://github.com/AnjalLLL/localgate/tree/main/docs"
Repository = "https://github.com/AnjalLLL/localgate"
Issues = "https://github.com/AnjalLLL/localgate/issues"
Changelog = "https://github.com/AnjalLLL/localgate/blob/main/CHANGELOG.md"

# Third-party backends register themselves under this entry-point group; see
# docs/architecture.md for the contract. The built-ins are registered the same
# way so there is no privileged path a plugin can't take.
[project.entry-points."localgate.backends"]
ollama = "localgate.backends.ollama:OllamaBackend"
vllm = "localgate.backends.vllm:VLLMBackend"
llamacpp = "localgate.backends.llamacpp:LlamaCppBackend"
openai_compat = "localgate.backends.openai_compat:OpenAICompatBackend"
fake = "localgate.backends.fake:FakeBackend"

[tool.hatch.build.targets.wheel]
packages = ["src/localgate"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
# B008 forbids function calls in argument defaults. `Depends(...)` in a default is
# how FastAPI declares dependencies — the rule does not know that, and following it
# would mean abandoning the framework's core idiom.
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/localgate"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]

[tool.mypy]
python_version = "3.10"
packages = ["localgate"]
mypy_path = "src"
warn_unused_configs = true
warn_redundant_casts = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["tiktoken.*", "prometheus_client.*"]
ignore_missing_imports = true
